Added color change option to footer

--- a/style2.css
+++ b/style2.css
@@ -110,6 +110,10 @@ p {
   border: 1px solid #fcf800;
   color: #4e57d6;
 }
+.footer-background-1 {
+  background-color: #373e98;
+  box-shadow: 0 -10px 10px -10px black;
+}
 
 /********THEME 2 ********/
 .website-background-2 {
@@ -187,6 +191,10 @@ p {
   background-color: #71c9dc;
   border-color: #71c9dc;
   color: white;
+}
+.footer-background-2 {
+  background-color: #efefef;
+  box-shadow: 0 -10px 10px -10px gray;
 }
 
 /******** THEME 3 ********/
@@ -266,6 +274,10 @@ p {
   border: 2px solid #07dea8;
   color: #1f2739;
 }
+.footer-background-3 {
+  background-color: #111620;
+  box-shadow: 0 -15px 10px -10px black;
+}
 
 /********THEME 4 ********/
 .website-background-4 {
@@ -273,7 +285,7 @@ p {
 }
 .header-background-4 {
   background-color: #fefbe9;
-  box-shadow: 0 15px 10px -10px black;
+  box-shadow: 0 10px 10px -10px black;
 }
 .hamburger-4 {
   color: #183a1d;
@@ -342,6 +354,10 @@ p {
   background-color: #f6c453;
   border: 2px solid #f6c453;
   color: #183a1d;
+}
+.footer-background-4 {
+  background-color: #fefbe9;
+  box-shadow: 0 -10px 10px -10px black;
 }
 /******** MOBILE ********/
 
@@ -462,7 +478,7 @@ header button {
   text-decoration: underline;
 }
 #logo {
-  font-size: 2em;
+  font-size: 1.5em;
   padding-left: 1em;
   font-weight: bold;
 }
@@ -646,6 +662,19 @@ form {
 .contact-button:hover {
   cursor: pointer;
 }
+footer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+.footer-img {
+  width: 15%;
+  margin: 1em 0;
+}
+.footer-img:hover {
+  box-shadow: 3px 3px 10px rgb(180, 179, 179);
+  cursor: pointer;
+}
 
 /******** TABLET ********/
 
@@ -655,6 +684,9 @@ form {
     margin: 1em;
   }
   /***Header***/
+  #logo {
+    font-size: 2em;
+  }
   .small-nav {
     display: none;
   }
