--- a/style3.css
+++ b/style3.css
@@ -413,10 +413,10 @@ p {
   width: 40%;
   margin-bottom: 1em;
   padding: none;
-  border: 1px solid black;
 }
 .color-buttons img:hover {
   cursor: pointer;
+  box-shadow: -3px 3px 10px gray;
 }
 /***Header***/
 header {
@@ -672,8 +672,15 @@ footer {
   margin: 1em 0;
 }
 .footer-img:hover {
-  box-shadow: 3px 3px 10px rgb(180, 179, 179);
   cursor: pointer;
+}
+footer a img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: fill;
+}
+.footer-img img:hover {
+  box-shadow: 3px 3px 3px rgb(180, 179, 179);
 }
 
 /******** TABLET ********/
