--- a/style3.css
+++ b/style3.css
@@ -1,156 +1,830 @@
+/***General***/
 html {
-  font-size: 1rem;
+  scroll-padding-top: 4em;
+  font-family: "Coda", cursive;
 }
-h1 {
-  font-size: 1.2rem;
+a {
+  text-decoration: none;
 }
-h2 {
-  font-size: 1.1rem;
-  width: 100%;
-}
-p {
-  font-size: 12px;
-}
-.social-icons-section {
-  width: 100%;
-  text-align: center;
-}
-.social-icon {
-  margin: 1rem;
-}
-i {
-  font-size: 1.5rem;
-}
-.about-img {
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: center;
-  align-items: center;
-}
-.profile-picture {
-  width: 50%;
-  border-radius: 50%;
-}
-#skills-section {
-  text-align: center;
+
+body {
+  margin: 0;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
 }
-.all-skills {
+h1,
+h2,
+h3,
+h4 {
+  font-weight: normal;
+}
+h1 {
+  font-size: 80px;
+}
+h2 {
+  font-size: 60px;
+  font-weight: bold;
+}
+h4 {
+  font-size: 20px;
+}
+p {
+  font-size: 16px;
+}
+/*** Website Color Change ***/
+
+/******** THEME 1 ********/
+.website-background-1 {
+  background-color: #373e98;
+}
+.header-background-1 {
+  background-color: #373e98;
+  box-shadow: 0 10px 10px -10px black;
+}
+.hamburger-1 {
+  color: white;
+}
+.small-nav-1 {
+  background-color: #373e98;
+  box-shadow: 0 10px 10px -10px black;
+}
+.small-nav-1 a {
+  color: white;
+}
+.mylogo-1 {
+  color: white;
+}
+.mynav-1 a {
+  color: white;
+  border-right: 2px solid white;
+}
+.icon-1 {
+  color: #ffe36e;
+}
+.h4-1 {
+  color: white;
+}
+.highlighter-1 {
+  background-color: #f16775;
+}
+.a-1:hover {
+  color: #fcf800;
+}
+
+.h2-1 {
+  color: #fffd6e;
+  width: 100%;
+  text-align: center;
+  margin: 15px 0;
+}
+.skill-1 {
+  color: white;
+}
+.project-card-1 {
+  background-color: #4e57d6;
+  box-shadow: 5px 5px 10px black;
+}
+.project-card-1:hover {
+  box-shadow: 10px 10px 20px black;
+}
+.project-card-body-1 {
+  color: white;
+}
+.form-input-1 {
+  background-color: #4e57d6;
+  color: white;
+}
+.form-input-1::placeholder {
+  color: white;
+  font-family: "Coda", cursive;
+}
+.contact-button-1 {
+  background-color: #ffe36e;
+  border: 1px solid #ffe36e;
+  color: #4e57d6;
+}
+.contact-button-1:hover {
+  background-color: #fcf800;
+  border: 1px solid #fcf800;
+  color: #4e57d6;
+}
+.footer-background-1 {
+  background-color: #373e98;
+  box-shadow: 0 -10px 10px -10px black;
+}
+
+/********THEME 2 ********/
+.website-background-2 {
+  background-color: white;
+}
+.header-background-2 {
+  background-color: #efefef;
+  box-shadow: 0 10px 10px -10px gray;
+}
+.hamburger-2 {
+  color: black;
+}
+.small-nav-2 {
+  box-shadow: 0 10px 10px -10px gray;
+  background-color: #efefef;
+}
+.small-nav-2 a {
+  color: #ff3b3f;
+}
+.mylogo-2 {
+  color: #ff3b3f;
+}
+.mynav-2 a {
+  color: #ff3b3f;
+  border-right: 2px solid #ff3b3f;
+}
+.icon-2 {
+  color: #ff3b3f;
+}
+.h4-2 {
+  color: black;
+}
+.highlighter-2 {
+  background-color: #ff3b3e9d;
+}
+.h2-2 {
+  color: #ff3b3f;
+  width: 100%;
+  text-align: center;
+  margin: 15px 0;
+}
+.a-2:hover {
+  color: #71c9dc;
+}
+.skill-section-2 {
+  border-radius: 20px;
+}
+.skill-2 {
+  color: black;
+}
+.project-card-2 {
+  background-color: #caebf2;
+  box-shadow: 5px 5px 10px gray;
+}
+.project-card-2:hover {
+  box-shadow: 5px 5px 20px black;
+}
+.project-card-body-2 {
+  color: black;
+}
+.form-input-2 {
+  background-color: #efefef;
+  color: black;
+}
+.form-input-2::placeholder {
+  color: black;
+  font-family: "Coda", cursive;
+}
+.contact-button-2 {
+  background-color: #ff3b3f;
+  border: 2px solid #ff3b3f;
+  color: white;
+}
+.contact-button-2:hover {
+  background-color: #71c9dc;
+  border-color: #71c9dc;
+  color: white;
+}
+.footer-background-2 {
+  background-color: #efefef;
+  box-shadow: 0 -10px 10px -10px gray;
+}
+
+/******** THEME 3 ********/
+.website-background-3 {
+  background-color: #111620;
+}
+.header-background-3 {
+  background-color: #111620;
+  box-shadow: 0 15px 10px -10px black;
+}
+.hamburger-3 {
+  color: white;
+}
+.small-nav-3 {
+  background-color: #111620;
+  color: white;
+  box-shadow: 0 15px 10px -10px black;
+}
+.small-nav-3 a {
+  color: white;
+}
+.mylogo-3 {
+  color: white;
+}
+.mynav-3 a {
+  color: white;
+  border-right: 2px solid #5e0dfb;
+}
+.icon-3 {
+  color: #5e0dfb;
+}
+.h4-3 {
+  color: white;
+}
+.highlighter-3 {
+  background-color: #07dea8;
+  color: #111620;
+}
+.a-3:hover {
+  color: #07dea8;
+}
+.h2-3 {
+  color: #5e0dfb;
+  width: 100%;
+  text-align: center;
+  margin: 15px 0;
+}
+
+.skill-3 {
+  color: white;
+}
+.project-card-3 {
+  background-color: #1f2739;
+  box-shadow: 5px 5px 10px black;
+}
+.project-card-3:hover {
+  box-shadow: 5px 5px 10px #07dea8;
+}
+.project-card-body-3 {
+  color: white;
+}
+.form-input-3 {
+  background-color: #1f2739;
+  color: white;
+}
+.form-input-3::placeholder {
+  color: white;
+  font-family: "Coda", cursive;
+}
+.contact-button-3 {
+  background-color: #5e0dfb;
+  border: 2px solid #5e0dfb;
+  color: white;
+}
+.contact-button-3:hover {
+  background-color: #07dea8;
+  border: 2px solid #07dea8;
+  color: #1f2739;
+}
+.footer-background-3 {
+  background-color: #111620;
+  box-shadow: 0 -15px 10px -10px black;
+}
+
+/********THEME 4 ********/
+.website-background-4 {
+  background-color: #fefbe9;
+}
+.header-background-4 {
+  background-color: #fefbe9;
+  box-shadow: 0 10px 10px -10px black;
+}
+.hamburger-4 {
+  color: #183a1d;
+}
+.small-nav-4 {
+  background-color: #fefbe9;
+  color: #183a1d;
+  box-shadow: 0 15px 10px -10px black;
+}
+.small-nav-4 a {
+  color: #183a1d;
+}
+.mylogo-4 {
+  color: #183a1d;
+}
+.mynav-4 a {
+  color: #183a1d;
+  border-right: 2px solid #183a1d;
+}
+.icon-4 {
+  color: #f0a04b;
+}
+.h4-4 {
+  color: #183a1d;
+}
+.highlighter-4 {
+  background-color: #e1eedd;
+  color: #183a1d;
+}
+.a-4:hover {
+  color: #f6c453;
+}
+.h2-4 {
+  color: #f0a04b;
+  width: 100%;
+  text-align: center;
+  margin: 15px 0;
+}
+.skill-4 {
+  color: #183a1d;
+}
+.project-card-4 {
+  background-color: #e1eedd;
+  box-shadow: 5px 5px 10px black;
+}
+.project-card-4:hover {
+  box-shadow: 5px 5px 20px black;
+}
+.project-card-body-4 {
+  color: #183a1d;
+}
+.form-input-4 {
+  background-color: #e1eedd;
+  color: #183a1d;
+}
+.form-input-4::placeholder {
+  color: #183a1d;
+  font-family: "Coda", cursive;
+}
+.contact-button-4 {
+  background-color: #f0a04b;
+  border: 2px solid #f0a04b;
+  color: #183a1d;
+}
+.contact-button-4:hover {
+  background-color: #f6c453;
+  border: 2px solid #f6c453;
+  color: #183a1d;
+}
+.footer-background-4 {
+  background-color: #fefbe9;
+  box-shadow: 0 -10px 10px -10px black;
+}
+/******** MOBILE ********/
+
+/***Homepage***/
+.hide-all {
+  display: none;
+}
+.show-all {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+.home-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  overflow: auto;
+  width: 80%;
+  box-shadow: -10px 10px 8px gray, -10px 10px 8px black;
+  border: 5px solid black;
+  margin: 1em 0;
+}
+.home-pic {
+  width: 50%;
+  margin-top: 1em;
+}
+.home-pic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+.greeting {
+  width: 100%;
+  padding: 1em;
+  text-align: center;
+}
+.home-h2 {
+  font-size: 2em;
+  margin-top: 1em;
+}
+.home-h3 {
+  margin: 0;
+}
+.color-buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.color-buttons img {
+  width: 40%;
+  margin-bottom: 1em;
+  padding: none;
+}
+.color-buttons img:hover {
+  cursor: pointer;
+  box-shadow: -3px 3px 10px gray;
+}
+/***Header***/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  height: 4em;
+  width: 100%;
+}
+.large-nav {
+  display: none;
+}
+.show {
+  position: absolute;
+  left: 0px;
+  top: 64px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  padding-left: 3.2em;
+  height: 200px;
+}
+.hide {
+  display: none;
+}
+header button {
+  margin-right: 2em;
+  background: transparent;
+  border: 0;
+}
+.hamburger i {
+  font-size: 2em;
+  background: transparent;
+}
+.hamburger:hover {
+  cursor: pointer;
+}
+.mynav {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 10px;
+  margin: 0;
+  height: 100%;
+}
+#no-border {
+  border-right: none;
+}
+.nav-link {
+  width: 100%;
+}
+.nav-link:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+#logo {
+  font-size: 1.5em;
+  padding-left: 1em;
+  font-weight: bold;
+}
+
+/***About***/
+#about {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 5em;
+}
+.about-image {
+  width: 70%;
+  height: 80%;
+  overflow: hidden;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+.about-image img {
+  height: 70%;
+  max-width: 70%;
+  margin: 1em;
+  border-radius: 50%;
+}
+.social-icons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  margin: 1em 0;
+}
+.social-icons i {
+  font-size: 2em;
+  padding: 3px 0;
+}
+.about-description {
+  width: 80%;
+  line-height: 2em;
+  padding: 0 30px 5px 30px;
+  margin: 0 1em;
+}
+
+/***Skills***/
+#skills-section {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40px;
+}
+#all-skills {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
   width: 90%;
+  padding-top: 1em;
 }
 .skill {
-  text-align: center;
   width: 20%;
-  margin: 10px;
+  text-align: center;
+  margin: 1em;
 }
-.carousel-inner {
+.skill i {
+  font-size: 2em;
+}
+
+/***Project Cards***/
+.project-card {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: start;
+  text-align: center;
+  width: 60%;
+  height: fit-content;
+  margin: 1em;
   padding: 1em;
+  overflow: auto;
+  border-radius: 20px;
 }
-.card {
-  margin: 0 0.5em;
-  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+
+.project-card-image {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+.project-card-body {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  height: 70%;
+}
+
+.project-card.title {
+  margin-bottom: 0;
+}
+.project-card-description {
+  margin: 0;
+}
+.project-card-body ul {
+  margin: 0;
+  padding: 1em 0 0 0;
+}
+.project-card-body li {
+  padding: 0.1em 0;
+}
+
+/***Projects***/
+#projects-section {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+/***Contact***/
+#contact-section {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 1em;
+}
+.contact {
+  width: 95%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+.contact-desc {
+  width: 90%;
+  text-align: center;
+  line-height: 30px;
+}
+
+.form {
+  width: 90%;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5px;
+}
+form {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+.name,
+.email,
+.subject {
+  margin-top: 1em;
+  width: 100%;
+  height: 30px;
   border: none;
 }
-.carousel-control-prev,
-.carousel-control-next {
-  background-color: #e1e1e1;
-  width: 6vh;
-  height: 6vh;
-  border-radius: 50%;
-  top: 50%;
-  transform: translateY(-50%);
+.project {
+  margin-top: 1em;
+  width: 100%;
+  height: 120px;
+  border: none;
+}
+.contact-button {
+  font-size: 16px;
+  margin: 20px 0;
+  font-weight: bold;
+}
+.contact-button:hover {
+  cursor: pointer;
+}
+footer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+.footer-img {
+  width: 15%;
+  margin: 1em 0;
+}
+.footer-img:hover {
+  cursor: pointer;
+}
+footer a img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: fill;
+}
+.footer-img img:hover {
+  box-shadow: 3px 3px 3px rgb(180, 179, 179);
 }
 
-@media (min-width: 576px) {
-  .profile-picture {
-    width: 80%;
-  }
-  i {
-    font-size: 1.7rem;
-  }
-  p {
-    font-size: 14px;
-  }
-}
+/******** TABLET ********/
 
-@media (min-width: 768px) {
-  html {
-    font-size: 1.1rem;
+@media all and (min-width: 700px) {
+  /*** Homepage ***/
+  .color-buttons img {
+    margin: 1em;
   }
-  h1 {
-    font-size: 1.3rem;
+  /***Header***/
+  #logo {
+    font-size: 2em;
   }
-  h2 {
-    font-size: 1.2rem;
+  .small-nav {
+    display: none;
   }
-  p {
-    font-size: 16px;
+  .large-nav {
+    display: none;
   }
-  .profile-picture {
-    width: 80%;
+
+  /***About***/
+  .about-image img {
+    width: 60%;
   }
-  i {
-    font-size: 2rem;
+  .about-image i {
+    font-size: 3em;
   }
-  .carousel-item {
-    margin-right: 0;
-    flex: 0 0 33.333333%;
-    display: block;
+  /***Skills***/
+  .skill i {
+    font-size: 3em;
   }
-  .carousel-inner {
+
+  /***Cards***/
+
+  .project-card {
+    width: 40%;
+    height: fit-content;
+  }
+
+  /***Contact***/
+
+  .contact {
     display: flex;
-  }
-  .card .img-wrapper {
-    max-width: 100%;
-    height: 13em;
-    display: flex;
-    justify-content: center;
+    flex-flow: row wrap;
+    justify-content: space-around;
     align-items: center;
   }
-  .card img {
-    max-height: 100%;
+  .contact i {
+    font-size: 2em;
   }
-}
 
-@media (min-width: 991px) {
-  html {
-    font-size: 1.2rem;
-  }
-  h1 {
-    font-size: 1.5rem;
-  }
-  h2 {
-    font-size: 1.4rem;
-  }
-  p {
-    font-size: 18px;
-  }
-}
+  /******** DESKTOP ********/
 
-@media (min-width: 1200px) {
-  html {
-    font-size: 1.2rem;
+  @media (min-width: 1000px) {
+    /***Homepage***/
+    .home-pic {
+      width: 40%;
+    }
+    .home-pic img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
+    .greeting {
+      width: 50%;
+      padding: 1em 2.5em;
+      text-align: left;
+    }
+    .home-h2 {
+      font-size: 3em;
+      margin: 0;
+    }
+    .home-h3 {
+      font-size: 2em;
+    }
+
+    /***Header***/
+    .small-nav {
+      display: none;
+    }
+    .large-nav {
+      display: flex;
+      width: 50%;
+      font-size: 20px;
+      padding-right: 2em;
+    }
+    .mynav {
+      flex-flow: row wrap;
+      align-items: center;
+      width: 100%;
+      height: auto;
+    }
+    .mynav a {
+      width: 23%;
+      text-align: center;
+    }
+
+    .hamburger {
+      display: none;
+    }
+
+    /***About***/
+    #about {
+      align-items: flex-start;
+    }
+    .about-description {
+      margin-top: 1em;
+      width: 55%;
+      padding: 1em;
+    }
+    .about-image {
+      width: 35%;
+      margin-top: 1em;
+    }
+    .about-image img {
+      width: 100%;
+      margin-top: 0;
+    }
+
+    /***Cards***/
+
+    .project-card {
+      width: 25%;
+    }
   }
-  h1 {
-    font-size: 1.7rem;
+
+  /***Contact***/
+  .contact-desc {
+    width: 30%;
+    text-align: left;
   }
-  h2 {
-    font-size: 1.6rem;
+  .form {
+    width: 60%;
   }
-  p {
-    font-size: 20px;
+  form {
+    margin-bottom: 0;
+    justify-content: start;
+    align-items: start;
+    width: 80%;
   }
-  i {
-    font-size: 2.5rem;
+  .social-icons {
+    justify-content: space-between;
   }
-  .social-icon {
-    margin: 2rem;
+  .contact-button {
+    font-size: 1.2em;
   }
 }
